--- a/requirements.yml
+++ b/requirements.yml
@@ -1,1 +1,31 @@
-
+---
+functional:
+  - Пользователь может зарегистрироваться на сайте используя  почту, дискорд, гитхаб
+  - Пользователь может авторизоваться на сайте используя почту, дискорд, гитхаб
+  - Пользователь может создать игру против бота или другого пользователя
+  - Пользователь может выбрать уровень сложности игры
+  - Пользователь может подключиться к уже созданной игре в качестве игрока
+  - Пользователь может присоединиться к созданной игре как игрок
+  - Пользователь может присоединиться к созданной игре как зритель
+  - Во время игры оба пользователя могут видеть код друг друга
+  - Во время игры пользователи могут изменить язык программирования
+  - Пользователь может отправлять сообщение в чат
+  - Во время игры пользователь может редактировать свой код и проверять его неограниченное количество раз
+  - Во время игры все пользователи видят таймер с отчетом времени до конца партии
+  - При правильном решении задачи одним из игроков, игра заканчивается
+  - За победу в игре пользователю начисляются очки, а за проигрыш отнимаются
+  - После окончания игры, все пользователи должны иметь возможность выйти из игры
+  - Пользователь имеет свой личный профиль, в котором он может посмотреть свой рейтинг, историю игр
+  - Пользователь может просматривать рейтинговую таблицу среди всех игроков
+non-functional:
+  - Сайт должен быть разработан с учетом удобства использования и оптимизирован для скорости работы
+  - Сайт должен быть безопасным и защищать данные пользователя
+  - Сайт должен быть удобным на мобильном устройстве
+  - Сайт должен быть протестирован на совместимость с последними версиями браузеров
+  - Сайт должен быть способен обрабатывать большое количество трафика (от 1000 пользователей)
+implicit:
+  - Сайт должен соответствовать законодательным актам
+  - Поьзователь может сбросить или восстановить пароль через почту
+  - В личном кабинете пользователь может изменить никнейм и аватар
+  - Пользователь может просматривать записи игр
+  - Пользователь может создать турнир
