--- a/test-cases.yml
+++ b/test-cases.yml
@@ -1,5 +1,19 @@
 ---
 - summary: |
+    Проверка на корректное отображение сайта
+  requirement: |
+    Все основные элементы сайта должны корректно отображаться(Текст, кнопки, отступы, цвета)
+  prerequisites: |
+    Пользователь авторизован
+    Открыта главная страница https://codebattle.hexlet.io/
+  test-data: |
+    Email = Test345432@yandex.ru Password = 123456
+  steps: 
+    - Проверить и убедиться, что все основные элементы выглядят корректно
+  expected-result: |
+    Основные элементы сайта отображаются корректно
+
+- summary: |
     Проверка регистрации нового пользователя
   requirement: |
     При удачном исходе новый пользователь будет зарегистрирован
