--- a/testing-report.yml
+++ b/testing-report.yml
@@ -1,1 +1,152 @@
+---
+- summary: |
+    Проверка на корректное отображение сайта
+  status: pass
 
+- summary: |
+    Проверка регистрации нового пользователя
+  status: pass
+
+- summary: |
+    Проверка регистрации пользователя через Github
+  status: pass
+
+- summary: |
+    Проверка регистрации пользователя через Discord
+  status: pass
+
+- summary: |
+    Проверка регистрации пользователя с незаполненными формами
+  status: pass
+
+- summary: |
+    Негативная проверка регистрации пользователя с никнеймом более 16 символов
+  status: pass
+
+- summary: |
+    Проверка регистрации пользователя с некорректной почтой
+  status: pass
+
+- summary: |
+    Проверка регистрации пользователя с использованием неуникального никнейма
+  status: pass
+
+- summary: |
+    Проверка авторизации пользователя с существующими почтой и паролем 
+  status: pass
+
+- summary: |
+    Проверка функции восстановления пароля
+  status: pass
+
+- summary: |
+    Проверка функции восстановления пароля с некорректной почтой
+  status: pass
+
+- summary: |
+    Проверка восстановления пароля с незарегистрированной почтой
+  status: pass
+
+- summary: |
+    Проверка редиректа на главную страницу при нажатии на логотип сайта 
+  status: pass
+
+- summary: |
+    Проверка открытия меню пользователя
+  status: pass
+
+- summary: |
+    Проверка создания игры против другого игрока
+  status: pass
+
+- summary: |
+    Проверка создания игры против бота
+  status: pass
+
+- summary: |
+    Проверка создания игры против друга
+  status: pass
+
+- summary: |
+    Проверка функции принятия приглашения в игру
+  status: pass
+
+- summary: |
+    Проверка функции отказа от приглашения в игру
+  status: pass
+
+- summary: |
+    Проверка возможности отправить сообщение в чат на главной странице сайта
+  status: pass
+
+- summary: |
+    Проверка возможности создания нового турнира
+  status: pass
+
+- summary: |
+    Проверка возможности начать игру с вкладки Lobby
+  status: pass
+
+- summary: |
+    Проверка возможности проверики кода в игре на правильность решения
+  status: pass
+
+- summary: |
+    Проверка возможности удаления написанного кода во время игры
+  status: pass
+
+- summary: |
+    Проверка возможности смены языка программирования во время игры
+  status: pass
+
+- summary: |
+    Проверка возможности сдаться во время игры
+  status: pass
+
+- summary: |
+    Проверка возможности писать в чат во время игры
+  status: pass
+
+- summary: |
+    Проверка возможности просмотра игры в качестве зрителя
+  status: pass
+
+- summary: |
+    Проверка возможности просмотра статистики других пользователей
+  status: pass
+
+- summary: |
+    Проверка возможности просматривать завершенные игры других пользователей
+  status: pass
+
+- summary: |
+    Проверка возможности создания новой игровой задачи
+  status: pass
+
+- summary: |
+    Проверка возможности создания новой игровой задачи с незаполненными формами
+  status: pass
+
+- summary: |
+    Проверка возможности сыграть пробную игру неавторизованному пользователю
+  status: pass
+
+- summary: |
+    Проверка отображения сайта на мобильных устройствах
+  status: pass
+
+- summary: |
+    Проверка работы сайта в браузере Chrome последней версии
+  status: pass
+
+- summary: |
+    Проверка работы сайта в браузере Opera последней версии
+  status: pass
+
+- summary: |
+    Проверка работы сайта в браузере Firefox последней версии
+  status: pass
+
+- summary: |
+    Проверка возможности отправки пустого сообщения в чат
+  status: pass
