--- a/testing-report.yml
+++ b/testing-report.yml
@@ -133,7 +133,7 @@
 
 - summary: |
     Проверка отображения сайта на мобильных устройствах
-  status: pass
+  status: fail
 
 - summary: |
     Проверка работы сайта в браузере Chrome последней версии
