--- a/testing-report.yml
+++ b/testing-report.yml
@@ -150,3 +150,19 @@
 - summary: |
     Проверка возможности отправки пустого сообщения в чат
   status: pass
+
+- summary: |
+    Проверка возможности авторизации пользователя с вводом невалидного пароля
+  status: pass
+
+- summary: |
+    Проверка отображения созданных турниров во вкладке Tournaments
+  status: pass
+
+- summary: |
+    Проверка отображения завершенных игр во вкладке Completed Games
+  status: pass
+
+- summary: |
+    Проверка возможности открыть топ лист по всем пользователям сайта
+  status: pass
