--- a/test-cases.yml
+++ b/test-cases.yml
@@ -1,17 +1,19 @@
 ---
 - summary: |
-    Проверка на корректное отображение сайта
+    Проверка на корректное отображение основных элементов страниц сайта
   requirement: |
-    Все основные элементы сайта должны корректно отображаться(Текст, кнопки, отступы, цвета)
+    Основные элементы сайта должны корректно отображаться(Текст, кнопки, отступы)
   prerequisites: |
     Пользователь авторизован
     Открыта главная страница https://codebattle.hexlet.io/
   test-data: |
     Email = Test345432@yandex.ru Password = 123456
   steps: 
-    - Проверить и убедиться, что все основные элементы выглядят корректно
+    - Проверить и убедиться, что текст и кнопки не накладываются друг на друга
+    - Проверить и убедиться, что все элементы имееют одинаковые отступы
+    - Проверить и убедиться, что текст и кнопки не выходят за пределы полей своих блоков
   expected-result: |
-    Основные элементы сайта отображаются корректно
+    Все элементы сайта читаемы. Текст и кнопки не накладываются друг на друга, все элементы страницы имееют одинаковый отступ, текст и кнопки не выходят за пределы полей своих блоков
 
 - summary: |
     Проверка регистрации нового пользователя
@@ -20,7 +22,7 @@
   prerequisites: |
     Открыта страница регистрации https://codebattle.hexlet.io/users/new?locale=en&next=%2F
   test-data: |
-    Nickname = Test345432 Email = Test345432@yandex.ru Password = 123456
+    Nickname = Использовать новый никнейм Email = Использовать новый email Password = 123456
   steps:
     - Ввести Nickname
     - Ввести Email
@@ -62,7 +64,7 @@
 - summary: |
     Проверка регистрации пользователя с незаполненными формами
   requirement: |
-    Регистрация не должна выполняться с незаполненными формами  
+    Регистрация не должна выполняться с незаполненными формами, пользователь получает ошибку о незаполненных обязательных полях
   prerequisites: |
     Открыта страница регистрации https://codebattle.hexlet.io/users/new?locale=en&next=%2F
   test-data: |
@@ -70,7 +72,7 @@
   steps:
     - Нажать кнопку "Submit"
   expected-result: |
-    Регистрация не выполнится
+    Регистрация не выполнится, появилась ошибка о незаполненных обязательных полях
 
 - summary: |
     Негативная проверка регистрации пользователя с никнеймом более 16 символов
@@ -371,6 +373,7 @@
     Email = Test345432@yandex.ru Password = 123456
     Параметры игры: level = 1, game type = with a bot, time control = 8 min, chose task = rect_area
   steps:
+    - Написать любой код в редактор
     - Нажать кнопку "Reset editor"
   expected-result: |
     Написанных пользователем код будет удален
@@ -647,3 +650,18 @@
     - Нажать кнопку "TOP list"
   expected-result: |
     Откроется страница со списком всех пользователей и их статистикой
+
+- summary: |
+    Проверка возможности присоединиться к созданной игре в качестве второго игрока
+  requirement: |
+    При удачном исходе пользователь сможет присоединиться к уже созданной игре в качестве второго игрока
+  prerequisites: |
+    Пользователь авторизован 
+    Открыта страница со списком доступных лобби https://codebattle.hexlet.io/#lobby
+    Создана игра игрок против игрока
+  test-data: |
+    Email = Test345432@yandex.ru Password = 123456
+  steps:
+    - Нажать кнопку "Fight" у любой из доступных игр
+  expected-result: |
+    Игра будет запущена, пользователь присоединился к игре в качестве второго игрока
