--- a/testing-report.yml
+++ b/testing-report.yml
@@ -1,6 +1,6 @@
 ---
 - summary: |
-    Проверка на корректное отображение сайта
+    Проверка на корректное отображение основных элементов страниц сайта
   status: pass
 
 - summary: |
@@ -165,4 +165,8 @@
 
 - summary: |
     Проверка возможности открыть топ лист по всем пользователям сайта
+  status: pass
+
+- summary: |
+    Проверка возможности присоединиться к созданной игре в качестве второго игрока
   status: pass
